--- a/Resources.html
+++ b/Resources.html
@@ -92,7 +92,7 @@
 								<h3>Sending Charity Money Overseas<br> 4 Pitfalls to Avoid</h3>
 								</header>
 							<a href=https://expenseplus.co.uk/blog/pitfalls-charities-need-to-avoid-when-sending-money-overseas/ target="_blank"><img style="max-width: 80%!important;" src="images/ExpensePlus - sending charity money overseas.png"></a>
-							<p>Does your charity send money overseas? If so, your staff and trustees need to be aware of the responsibilities and potential risks associated with such transfers.</p>
+							<p>Does your charity send money overseas? If so, your team need to be aware of the responsibilities and potential risks associated with such transfers.</p>
 							<div class="center-button">
 								<a href=https://expenseplus.co.uk/blog/pitfalls-charities-need-to-avoid-when-sending-money-overseas/ target="_blank" class="button fit" style="width:50%">Read more</a>
 							</div>
