--- a/Training-Support.html
+++ b/Training-Support.html
@@ -278,6 +278,15 @@
 									Michelle Hayes
 									<p style="font-size:12px;">CEO, Resurrected Bites</p>
 								</li>
+								<!-- Reference - Wildwood Church Stafford -->
+								<li>
+									<div style="margin-top:-200px; margin-bottom: 200px"></div>
+									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus-review-jane-russell.png">
+									<p style="font-style: italic;padding-top: 25px;">"Pete's been super helpful and supportive whilst we volunteers at church have been getting to grips with ExpensePlus. Because our Treasurer passed away so suddenly, it's been a real challenge to get a team together and move to an online accounting system, but Pete helped assimilate all our previous year's data with his Migration Package. I've found him super-speedy with responding to my email queries - I mean, in minutes, often! So glad that we've opted for his SupportPlus Package where he'll continue to be on hand for as long as we need. Plus, he'll do a weekly check-up to make sure everything's still looking ok on ExpensePlus. Perfect!!"</p>
+									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+									Jane Russell
+									<p style="font-size:12px;">Trustee, Wildwood Church, Stafford</p>
+								</li>
 							</ul>
 						</div>
 							<div class="center-button">
