--- a/Training-Support.html
+++ b/Training-Support.html
@@ -242,6 +242,19 @@
 															<p style="margin:0!important;">Reduced rates may be avaialble, <a href="contact.html">let's talk</a></p>
 														</li>
 												</ul>
+												<!-- Reference - Resurrected Bites -->
+								<li>
+									<div style="margin-top:-200px; margin-bottom: 200px"></div>
+									<header class="minor">
+									<h3>What Others Say</h3>
+									<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+									</header>
+									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus-reviews-Resurrected-bites.png">
+									<p style="font-style: italic;padding-top: 25px;">"Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. The level of service and speed of response has been excellent. He creates fantastic videos for training and for explaining changes he has made. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. Pete has also provided so many additional ways of supporting us which I was not expecting. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgable. I wish we had taken on Pete years ago. If you are a charity and looking for a bookkeeper and package to use, I would strongly recommend Pete and ExpensePlus.</p>
+									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+									Michelle Hayes
+									<p style="font-size:12px;">CEO, Resurrected Bites</p>
+								</li>
 											</div>
 					
 									
