--- a/Training-Support.html
+++ b/Training-Support.html
@@ -279,6 +279,11 @@
 
 										<!-- Prices Reference - Wildwood Church Stafford -->
 										<ul class="package-price" sytle="text-align:centre"> 
+											<div style="margin-top:-200px; margin-bottom: 200px"></div>
+														<header class="minor">
+														<h3>What Others Say</h3>
+														<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+														</header>
 												<li>
 													<div style="margin-top:-200px; margin-bottom: 200px"></div>
 													<img style="max-width: 20%!important;border-radius: 30px;" src="/images/ExpensePlus-review-jane-russell.png">
