--- a/Training-Support.html
+++ b/Training-Support.html
@@ -218,7 +218,7 @@
 								<!-- SupportPLUS Package End-->
 								<!-- Migration Package Start-->
 								<li>
-									<a id="migration" style="padding-top:100px;"></a>
+									<a id="migration"></a>
 									<div id=”migration” style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
 									<h3>Migration Package</h3>
