--- a/Training-Support.html
+++ b/Training-Support.html
@@ -219,7 +219,7 @@
 								<!-- Migration Package Start-->
 								<li>
 									<a id="migration"></a>
-									<div id=”migration” style="margin-top:-200px; margin-bottom: 200px"></div>
+									<div id="migration” style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
 									<h3>Migration Package</h3>
 									</header>
