--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<!-- ExpensePlus -->
 					<section id="ExpensePlus" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2"></section>
 						<section class="spotlight">
-							<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/rjUq2MfwhJk?si=vv1JZ1ybKIVPzvkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+							<div class="video"><iframe src="https://www.youtube.com/embed/rjUq2MfwhJk?si=vv1JZ1ybKIVPzvkW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 							<div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
 								<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant, my services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>. 
