--- a/index.html
+++ b/index.html
@@ -130,34 +130,205 @@
 							</div>
 						</section>
 				</section>
-				<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
-				<section class="wrapper style3 special">
-					<div class="inner">
-						<header class="minor">
-							<h2>What others say</h2>
-							<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-						</header>
-						<ul class="features">
-							<li>
-								<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
-								<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
-								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-								Graham Pyman
-								<p style="font-size:12px;">Director, ChristCentral Churches</p>
-							</li>
-							<!-- Liz Zambonini -->
-							<li>
-								<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-liz-zambonini-hope-church-harrogate.jpg">
-								<p style="font-style: italic;padding-top: 25px;">"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in ExpensePlus and understands working with charities. He moved all our accounts onto ExpensePlus and set everything up so that it was easy to use. He also trained us in how to use the new system so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
-								</br>
-								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-								Liz Zambonini
-								<p style="font-size:12px;">Ops Manager, Hope Church Harrogate</p>
-							</li>
-							
-						</ul>
-					</div>
-				</section>
+
+				
+<!--testimonials styling-->
+<style>
+	* {box-sizing: border-box}
+	body {font-family: Verdana, sans-serif; margin:0}
+	.mySlides {display: none}
+	img {vertical-align: middle;}
+	
+	/* Slideshow container */
+	.slideshow-container {
+	  max-width: 1000px;
+	  position: relative;
+	  margin: auto;
+	}
+	
+	/* Next & previous buttons */
+	.prev, .next {
+	  cursor: pointer;
+	  position: absolute;
+	  top: 50%;
+	  width: auto;
+	  padding: 16px;
+	  margin-top: -22px;
+	  color: white;
+	  font-weight: bold;
+	  font-size: 18px;
+	  transition: 0.6s ease;
+	  border-radius: 0 3px 3px 0;
+	  user-select: none;
+	}
+	
+	/* Position the "next button" to the right */
+	.next {
+	  right: 0;
+	  border-radius: 3px 0 0 3px;
+	}
+	
+	/* On hover, add a black background color with a little bit see-through */
+	.prev:hover, .next:hover {
+	  background-color: rgba(0,0,0,0.8);
+	}
+	
+	/* Caption text */
+	.text {
+	  color: #f2f2f2;
+	  font-size: 15px;
+	  padding: 8px 12px;
+	  position: relative;
+	  bottom: 8px;
+	  width: 80%;
+	  margin: auto;
+	  text-align: center;
+	}
+	
+	/* Number text (1/3 etc) */
+	.numbertext {
+	  color: #f2f2f2;
+	  font-size: 12px;
+	  padding: 8px 12px;
+	  position: absolute;
+	  top: 0;
+	}
+	
+	/* The dots/bullets/indicators */
+	.dot {
+	  cursor: pointer;
+	  height: 15px;
+	  width: 15px;
+	  margin: 0 2px;
+	  background-color: #bbb;
+	  border-radius: 50%;
+	  display: inline-block;
+	  transition: background-color 0.6s ease;
+	}
+	
+	.active, .dot:hover {
+	  background-color: #717171;
+	}
+	
+	/* Fading animation */
+	.fade {
+	  animation-name: fade;
+	  animation-duration: 1.5s;
+	}
+	
+	@keyframes fade {
+	  from {opacity: .4} 
+	  to {opacity: 1}
+	}
+	
+	/* On smaller screens, decrease text size */
+	@media only screen and (max-width: 300px) {
+	  .prev, .next,.text {font-size: 11px}
+	}
+
+	.slider-container {
+ display: block;
+	}
+</style>
+
+<!--testimonials-->
+<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
+<section class="wrapper style3 special">
+	<div class="inner">
+		<header class="minor">
+			<h2>What others say</h2>
+			<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+	
+<div class="slideshow-container">
+	<!-- Liz Zambonini -->
+	<div class="mySlides fade">
+	  <div class="numbertext">1 / 3</div>
+		<div class="slider-container">
+			<img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-liz-zambonini-hope-church-harrogate.jpg">
+		</div>
+	  	<div class="text">
+	  		<p style="font-style: italic;padding-top: 25px;">"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in ExpensePlus and understands working with charities. He moved all our accounts onto ExpensePlus and set everything up so that it was easy to use. He also trained us in how to use the new system so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
+			</br>
+			<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			Liz Zambonini
+			<p style="font-size:12px;">Ops Manager, Hope Church Harrogate</p>
+		</div>
+	</div>
+	<!-- Graham Pyman -->
+	<div class="mySlides fade">
+	  <div class="numbertext">2 / 3</div>
+	  <div class="slider-container">
+		<img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-graham pyman-christcentral-churches.jpg">
+	</div>
+	  <div class="text">
+		<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
+		<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+		Graham Pyman
+		<p style="font-size:12px;">Director, ChristCentral Churches</p>
+	</div>
+</div>
+	<!-- Jeremy Simpkins -->
+	<div class="mySlides fade">
+		<div class="numbertext">3 / 3</div>
+		  <div class="slider-container">
+			  <img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-jeremy simpkins-christcentral churches.jpg">
+		  </div>
+			<div class="text">
+				<p style="font-style: italic;padding-top: 25px;">""I'm the CEO of a UK based Charity operating across multiple nations. Pete has been amazing this year at reshaping and updating our accounting practices making them fit for purpose. I totally recommend both his skill and his integrity!""</p>
+			  </br>
+			  <p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			  Jeremy Simpkins
+			  <p style="font-size:12px;">CEO, ChristCentral Churches</p>
+		  </div>
+	</div>
+
+	<a class="prev" onclick="plusSlides(-1)">❮</a>
+	<a class="next" onclick="plusSlides(1)">❯</a>
+	
+	</div>
+	<br>
+	
+	<div style="text-align:center">
+	  <span class="dot" onclick="currentSlide(1)"></span> 
+	  <span class="dot" onclick="currentSlide(2)"></span> 
+	  <span class="dot" onclick="currentSlide(3)"></span> 
+	</div>
+</header>
+</div>
+</section>	
+
+	<!-- slider timer Scripts -->
+	<script>
+		let slideIndex = 1;
+		showSlides(slideIndex);
+		
+		function plusSlides(n) {
+		  showSlides(slideIndex += n);
+		}
+		
+		function currentSlide(n) {
+		  showSlides(slideIndex = n);
+		}
+		
+		function showSlides(n) {
+		  let i;
+		  let slides = document.getElementsByClassName("mySlides");
+		  let dots = document.getElementsByClassName("dot");
+		  if (n > slides.length) {slideIndex = 1}    
+		  if (n < 1) {slideIndex = slides.length}
+		  for (i = 0; i < slides.length; i++) {
+			slides[i].style.display = "none";  
+		  }
+		  for (i = 0; i < dots.length; i++) {
+			dots[i].className = dots[i].className.replace(" active", "");
+		  }
+		  slides[slideIndex-1].style.display = "block";  
+		  dots[slideIndex-1].className += " active";
+		}
+		</script>
+		<!--end of testimonial slider-->
+	
+
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
@@ -193,9 +364,12 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RXMLG8W"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	</body>
 </html>
+
