--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 	  right: 0;
 	  border-radius: 3px 0 0 3px;
 	}
+	/* Position the "prev button" to the right */
+	.next {
+	  left: 0;
+	  border-radius: 3px 0 0 3px;
+	}
 	
 	/* On hover, add a black background color with a little bit see-through */
 	.prev:hover, .next:hover {
