--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -38,7 +38,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -46,9 +46,9 @@
 									<div id="menu">
 										<ul>
 											<ul>
-												<li><a href="index.html">Home</a></li>
-												<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-												<li><a href="Training-Support.html">Training & Support</a></li>
+												<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
+												<li><a href="bookkeeping.html">Bookkeeping</a></li>
+												<li><a href="training-support.html">Training & Support</a></li>
 												<li><a href="Resources.html">Resources</a></li>
 												<li><a href="Contact.html">Contact</a></li>
 											</ul>
@@ -62,7 +62,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+							<img src="images/pd-marfleet-charity-accounting%20and-bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 							<p>Get in touch</p>
 						</header>
 						</article>
