--- a/Policies.html
+++ b/Policies.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<title>PD Marfleet Accoutning - Policies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,7 +29,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+					<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 					<nav id="nav">
 						<ul>
 							<li class="special">
@@ -37,11 +37,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<div id="menu">
 									<ul>
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-											<li><a href="Training-Support.html">Training & Support</a></li>
+											<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
+											<li><a href="bookkeeping.html">Bookkeeping</a></li>
+											<li><a href="training-support.html">Training & Support</a></li>
 											<li><a href="Resources.html">Resources</a></li>
-											<li><a href="Contact.html">Contact</a></li>
+											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</ul>
 								</div>
@@ -107,7 +107,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<h3>Changes to our privacy policy</h3>
 									<p>PD Marfleet Accounting keeps its privacy policy under regular review and places any updates on this web page. The current privacy policy was last updated on 27 Jul 2023</p>
 									<h3>How to contact us</h3>
-									<p>If you have any questions about PD Marfleet Accounting’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us <a href="Contact.html">here</a></p></br>
+									<p>If you have any questions about PD Marfleet Accounting’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us <a href="contact.html">here</a></p></br>
 									<h3>How to contact the appropriate authority</h3>
 									<p>Should you wish to report a complaint or if you feel that PD Marfleet Accounting has not addressed your concern in a satisfactory manner, you may contact the Information Commissioner’s Office.</p>
 								</div>
