--- a/Resources.html
+++ b/Resources.html
@@ -20,7 +20,7 @@
 		<title>Charity Bookkeeping Resources</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!-- Favicon -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -44,7 +44,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -52,11 +52,11 @@
 									<div id="menu">
 										<ul>
 											<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-											<li><a href="Training-Support.html">Training & Support</a></li>
+											<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
+											<li><a href="bookkeeping.html">Bookkeeping</a></li>
+											<li><a href="training-support.html">Training & Support</a></li>
 											<li><a href="Resources.html">Resources</a></li>
-											<li><a href="Contact.html">Contact</a></li>
+											<li><a href="contact.html">Contact</a></li>
 										</ul>
 										</ul>
 									</div>
@@ -68,7 +68,7 @@
 				<!-- Main -->
 			<article id="main">
 						<header>
-							<img src="images/Charity bookkeeping blog.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+							<img src="images/Charity%20bookkeeping%20blog.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 							<p>Charity Bookkeeping Resources</p>
 						</header>
 			
@@ -91,7 +91,7 @@
 							<header class="package">
 								<h3>Sending Charity Money Overseas<br> 4 Pitfalls to Avoid</h3>
 								</header>
-							<a href=https://expenseplus.co.uk/blog/pitfalls-charities-need-to-avoid-when-sending-money-overseas/ target="_blank"><img style="max-width: 80%!important;" src="images/ExpensePlus - sending charity money overseas.png"></a>
+							<a href=https://expenseplus.co.uk/blog/pitfalls-charities-need-to-avoid-when-sending-money-overseas/ target="_blank"><img style="max-width: 80%!important;" src="images/ExpensePlus%20-%20sending%20charity%20money%20overseas.png"></a>
 							<p>Does your charity send money overseas? If so, your team need to be aware of the responsibilities and potential risks associated with such transfers.</p>
 							<div class="center-button">
 								<a href=https://expenseplus.co.uk/blog/pitfalls-charities-need-to-avoid-when-sending-money-overseas/ target="_blank" class="button fit" style="width:50%">Read more</a>
@@ -113,7 +113,7 @@
 							<header class="package">
 								<h3>Best Ethical Bank Accounts for Churches & Charities</h3>
 								</header>
-							<a href=https://expenseplus.co.uk/blog/best-ethical-bank-accounts-churches-charities/ target="_blank"><img style="max-width: 80%!important;" src="images/Ethical Bank Accounts for Churches.png"></a>
+							<a href=https://expenseplus.co.uk/blog/best-ethical-bank-accounts-churches-charities/ target="_blank"><img style="max-width: 80%!important;" src="images/Ethical%20Bank%20Accounts%20for%20Churches.png"></a>
 							<p>Advice on choosing a charity bank account that balances high ethical values with efficient and easily accessible banking services.</p>
 							<div class="center-button">
 								<a href=https://expenseplus.co.uk/blog/best-ethical-bank-accounts-churches-charities class="button fit" style="width:50%" target="_blank">Read more</a>
