--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -18,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<title>Training and Support</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<!-- Favicon -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -43,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -51,11 +51,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div id="menu">
 										<ul>
 											<ul>
-												<li><a href="index.html">Home</a></li>
+												<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
 												<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-												<li><a href="Training-Support.html">Training & Support</a></li>
+												<li><a href="training-support.html">Training & Support</a></li>
 												<li><a href="Resources.html">Resources</a></li>
-												<li><a href="Contact.html">Contact</a></li>
+												<li><a href="contact.html">Contact</a></li>
 											</ul>
 										</ul>
 									</div>
@@ -67,7 +67,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="50%">
+							<img src="images/expenseplus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="50%">
 							<p>Outsourced Bookkeeping Consultant</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
 							
@@ -135,12 +135,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 	<section id="two" class="wrapper alt style2">
 		<section class="spotlight">
-			<div class="image"><img src="images/ExpensePlus-outsourced-bookkeeping-for-charities.jpg" alt="" /></div><div class="content">
+			<div class="image"><img src="images/expenseplus-outsourced-bookkeeping-for-charities.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">Once you choose to go ahead, I will then create a customised weekly bookkeeping process for us. This will clearly define how I will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you. Each week, I will check the digitally uploaded receipts, set up payments that you have approved, make adjustments as needed, and reconcile the books.</p>
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="images/ExpensePlus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
+			<div class="image"><img src="images/expenseplus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">In addition to answering emails and queries, it is typical to schedule a monthly call to review the previous month's figures and address any questions.
 					If you claim Gift Aid on donations, I can prepare your claim for you using ExpensePlus.
 					At the end of the year, I will complete the accruals and depreciation, and help you liaise with your independent examiner to sign off on the accounts.</p>
