--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+ <!-- *******  Owl Carousel Links  ******* -->
+		<!-- *******  Link To Custom CSS Style Sheet  ******* -->
+		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<!-- *******  Font Awesome Icons Link  ******* -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+	  
+		<!-- *******  Owl Carousel Links  ******* -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+	  
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+	  
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8">
+	   
 	<!-- Favicon -->
 			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -133,206 +149,198 @@
 
 				
 <!--testimonials styling-->
-<style>
-	* {box-sizing: border-box}
-	body {font-family: Verdana, sans-serif; margin:0}
-	.mySlides {display: none}
-	img {vertical-align: middle;}
+<div class="testimonials-section">
 	
-	/* Slideshow container */
-	.slideshow-container {
-	  max-width: 1000px;
-	  position: relative;
-	  margin: auto;
-	}
-	
-	/* Next & previous buttons */
-	.prev, .next {
-	  cursor: pointer;
-	  position: absolute;
-	  top: 100%;
-	  width: auto;
-	  padding: 16px;
-	  margin-top: -22px;
-	  color: white;
-	  font-weight: bold;
-	  font-size: 18px;
-	  transition: 0.6s ease;
-	  border-radius: 0 3px 3px 0;
-	  user-select: none;
-	}
-	
-	/* Position the "next button" to the right */
-	.next {
-	  right: 0;
-	  border-radius: 3px 0 0 3px;
-	}
-	/* Position the "prev button" to the right */
-	.next {
-	  left: 0;
-	  border-radius: 3px 0 0 3px;
-	}
-	
-	/* On hover, add a black background color with a little bit see-through */
-	.prev:hover, .next:hover {
-	  background-color: rgba(0,0,0,0.8);
-	}
-	
-	/* Caption text */
-	.text {
-	  color: #f2f2f2;
-	  font-size: 15px;
-	  padding: 8px 12px;
-	  position: relative;
-	  bottom: 8px;
-	  width: 80%;
-	  margin: auto;
-	  text-align: center;
-	}
-	
-	/* Number text (1/3 etc) */
-	.numbertext {
-	  color: #f2f2f2;
-	  font-size: 12px;
-	  padding: 8px 12px;
-	  position: absolute;
-	  top: 0;
-	}
-	
-	/* The dots/bullets/indicators */
-	.dot {
-	  cursor: pointer;
-	  height: 15px;
-	  width: 15px;
-	  margin: 0 2px;
-	  background-color: #bbb;
-	  border-radius: 50%;
-	  display: inline-block;
-	  transition: background-color 0.6s ease;
-	}
-	
-	.active, .dot:hover {
-	  background-color: #717171;
-	}
-	
-	/* Fading animation */
-	.fade {
-	  animation-name: fade;
-	  animation-duration: 1.5s;
-	}
-	
-	@keyframes fade {
-	  from {opacity: .4} 
-	  to {opacity: 1}
-	}
-	
-	/* On smaller screens, decrease text size */
-	@media only screen and (max-width: 300px) {
-	  .prev, .next,.text {font-size: 11px}
-	}
+	<!-- Section Header Starts -->
+	<header class="section-header">
+		<h1>What Clients Say</h1>
+		<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
+	</header>
+	<!-- Section Header Ends -->
 
-	.slider-container {
- display: block;
-	}
-</style>
+	<!-- Owl Carousel Slider Starts -->
+	<div class="owl-carousel owl-theme testimonials-container">
+		<!-- 1 - Liz Zambonini -->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Highly Recommended</h2>
+    			</div>
+    			<p>"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in ExpensePlus and understands working with charities. He moved all our accounts onto ExpensePlus and set everything up so that it was easy to use. He also trained us in how to use the new system so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/expenseplus review-liz-zambonini-hope-church-harrogate.jpg">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Liz Zambonini</span>
+    				<span>Ops Manager, Hope Church Harrogate</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item1 Ends -->
 
-<!--testimonials-->
-<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
-<section class="wrapper style3 special">
-	<div class="inner">
-		<header class="minor">
-			<h2>What others say</h2>
-			<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
-	
-<div class="slideshow-container">
-	<!-- Liz Zambonini -->
-	<div class="mySlides fade">
-	  <div class="numbertext">1 / 3</div>
-		<div class="slider-container">
-			<img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-liz-zambonini-hope-church-harrogate.jpg">
-		</div>
-	  	<div class="text">
-	  		<p style="font-style: italic;padding-top: 25px;">"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in ExpensePlus and understands working with charities. He moved all our accounts onto ExpensePlus and set everything up so that it was easy to use. He also trained us in how to use the new system so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
-			</br>
-			<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-			Liz Zambonini
-			<p style="font-size:12px;">Ops Manager, Hope Church Harrogate</p>
-		</div>
-	</div>
-	<!-- Graham Pyman -->
-	<div class="mySlides fade">
-	  <div class="numbertext">2 / 3</div>
-	  <div class="slider-container">
-		<img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-graham pyman-christcentral-churches.jpg">
-	</div>
-	  <div class="text">
-		<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
-		<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-		Graham Pyman
-		<p style="font-size:12px;">Director, ChristCentral Churches</p>
-	</div>
+    	<!-- Item2 Starts - Graham Pyman -->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>We're Delighted! </h2>
+    			</div>
+    			<p>We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!</p>
+				<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/expenseplus review-graham pyman-christcentral-churches.jpg">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Graham Pyman</span>
+    				<span>Director, ChristCentral Churches</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item2 Ends -->
+
+    	<!-- Item3 Starts Jane Russell WW01-->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Supper Helpful</h2>
+    			</div>
+    			<p>Pete's been super helpful and supportive whilst we volunteers at church have been getting to grips with ExpensePlus. Because our Treasurer passed away so suddenly, it's been a real challenge to get a team together and move to an online accounting system, but Pete helped assimilate all our previous year's data with his Migration Package. I've found him super-speedy with responding to my email queries - I mean, in minutes, often! So glad that we've opted for his SupportPlus Package where he'll continue to be on hand for as long as we need. Plus, he'll do a weekly check-up to make sure everything's still looking ok on ExpensePlus. Perfect!!</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/ExpensePlus-review-jane-russell.png">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Jane Russell</span>
+    				<span>Trustee, Wildwood Church, Stafford</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item3 Ends -->
+
+    	<!-- Item4 Starts - RB01 -->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Such Fantastic Support</h2>
+    			</div>
+    			<p>Pete has been such a fantastic support as we have transitioned onto ExpensePlus and he has taken on our bookkeeping. We have the Migration & BookkeegingPlus Packages and I can honestly say, we would be tearing our hair out without Pete. The level of service and speed of response has been excellent. He creates fantastic videos for training and for explaining changes he has made. He has taken the time to thoroughly understand how we operate and to ensure that he supports the whole team as we learn this new system. Pete has also provided so many additional ways of supporting us which I was not expecting. He is hugely encouraging, very patient and a pleasure to work with in addition to being very knowledgable. I wish we had taken on Pete years ago. If you are a charity and looking for a bookkeeper and package to use, I would strongly recommend Pete and ExpensePlus.</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/REveiw-Resurrected-Bites-MH.png">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Michelle Hayes</span>
+    				<span>CEO, Resurrected Bites</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item4 Ends -->
+
+    	<!-- Item5 Starts JS CC01-->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Pete has been amazing!</h2>
+    			</div>
+    			<p>I'm the CEO of a UK based Charity operating across multiple nations. Pete has been amazing this year at reshaping and updating our accounting practices making them fit for purpose. I totally recommend both his skill and his integrity!</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/expenseplus review-jeremy simpkins-christcentral churches.jpg">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Jeremy Simpkins</span>
+    				<span>CEO, ChristCentral Churches</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item5 Ends -->
+
+    	<!-- Item6 Starts - WW02 Richard Proctor -->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Excellent and Thorough</h2>
+    			</div>
+    			<p>Pete Marfleet has been great to work with. He did an excellent and thorough review of our bookkeeping and policies, as a charity needing to keep our procedures on track with our growth. He clearly has an excellent understanding of charity accounting with the added bonus of expertise in ExpensePlus, the specific package we use. He has given us both assurance about our financial management and some good suggestions for improvement. He combined direct and clear communication, timeliness and keeping us informed, with enthusiasm, friendliness, and the willingness to help out with small non-contracted bits of advice along the way. I highly recommend his services to anyone running a small to medium charity.</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/ExpensePlus-review-RP-Europe Without Orphans.jpeg">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Richard Proctor</span>
+    				<span>Director, World Without Orphans (Europe)</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item6 Ends -->
+
+		<!-- Item6 Starts - AS01 Trish -->
+    	<div class="item testimonial-card">
+    		<main class="test-card-body">
+    			<div class="quote">
+    				<i class="fa fa-quote-left"></i>
+    				<h2>Pete's training is excellent!</h2>
+    			</div>
+    			<p>Pete has helped our church get setup on ExpensePlus with very little time before the start of a new financial year. We bought his Migration Package and SupportPlus Package which is great value and has been invaluable. Pete's training is excellent and he's very responsive to support calls. We are now in a much better place with our bookkeeping processes and Pete gently reminds us of things we should be doing that perhaps we weren't! I wouldn't hesitate to recommend his services.</p>
+    			<div class="ratings">
+    				<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+			 	</div>
+    		</main>
+    		<div class="profile">
+    			<div class="profile-image">
+    				<img src="images/expenseplus-review-AS01-Trish.jpeg">
+    			</div>
+    			<div class="profile-desc">
+    				<span>Trish Tye</span>
+    				<span>PCC Secretary, All Saints' Church Guildford</span>
+    			</div>
+    		</div>
+    	</div>
+    	<!-- Item6 Ends -->
+
+    </div>
+	<!-- Owl Carousel Slider Ends -->
+
 </div>
-	<!-- Jeremy Simpkins -->
-	<div class="mySlides fade">
-		<div class="numbertext">3 / 3</div>
-		  <div class="slider-container">
-			  <img style="max-width: 20%!important;display: block;margin: 30px auto 0 auto;border-radius: 15px;" src="images/expenseplus review-jeremy simpkins-christcentral churches.jpg">
-		  </div>
-			<div class="text">
-				<p style="font-style: italic;padding-top: 25px;">""I'm the CEO of a UK based Charity operating across multiple nations. Pete has been amazing this year at reshaping and updating our accounting practices making them fit for purpose. I totally recommend both his skill and his integrity!""</p>
-			  </br>
-			  <p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-			  Jeremy Simpkins
-			  <p style="font-size:12px;">CEO, ChristCentral Churches</p>
-		  </div>
-	</div>
 
-	<a class="prev" onclick="plusSlides(-1)">❮</a>
-	<a class="next" onclick="plusSlides(1)">❯</a>
-	
-	</div>
-	<br>
-	
-	<div style="text-align:center">
-	  <span class="dot" onclick="currentSlide(1)"></span> 
-	  <span class="dot" onclick="currentSlide(2)"></span> 
-	  <span class="dot" onclick="currentSlide(3)"></span> 
-	</div>
-</header>
-</div>
-</section>	
+<!--   *****   JQuery Link   *****   -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
-	<!-- slider timer Scripts -->
-	<script>
-		let slideIndex = 1;
-		showSlides(slideIndex);
-		
-		function plusSlides(n) {
-		  showSlides(slideIndex += n);
-		}
-		
-		function currentSlide(n) {
-		  showSlides(slideIndex = n);
-		}
-		
-		function showSlides(n) {
-		  let i;
-		  let slides = document.getElementsByClassName("mySlides");
-		  let dots = document.getElementsByClassName("dot");
-		  if (n > slides.length) {slideIndex = 1}    
-		  if (n < 1) {slideIndex = slides.length}
-		  for (i = 0; i < slides.length; i++) {
-			slides[i].style.display = "none";  
-		  }
-		  for (i = 0; i < dots.length; i++) {
-			dots[i].className = dots[i].className.replace(" active", "");
-		  }
-		  slides[slideIndex-1].style.display = "block";  
-		  dots[slideIndex-1].className += " active";
-		}
-		</script>
-		<!--end of testimonial slider-->
-	
+<!--   *****   Owl Carousel js Link  *****  -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+<!--   *****   Link To Custom Script File   *****   -->
+<script type="text/javascript" src="script.js"></script>
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
