--- a/snipcart.html
+++ b/snipcart.html
@@ -20,7 +20,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../PDP-Website%20(Live)%20copy/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -38,11 +38,11 @@
 									<div id="menu">
 										<ul>
 											<ul>
-												<li><a href="index.html">Home</a></li>
-												<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-												<li><a href="Training-Support.html">Training & Support</a></li>
+												<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
+												<li><a href="bookkeeping.html">Bookkeeping</a></li>
+												<li><a href="training-support.html">Training & Support</a></li>
 												<li><a href="https://www.youtube.com/channel/UCqJYofgfzYFe4UBMwhNAnZg">Resources</a></li>
-												<li><a href="Contact.html">Contact</a></li>
+												<li><a href="contact.html">Contact</a></li>
 											</ul>
 										</ul>
 									</div>
@@ -63,7 +63,7 @@
 
 					<article id="main">
 						<header>
-							<img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
+							<img src="images/expenseplus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
 							<p>Outsourced Bookkeeping</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
 							<a href="#one" class="more scrolly">Learn More</a>
