--- a/Policies copy.html
+++ b/Policies copy.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+					<a href="../PDP-Website%20(Live)%20copy/index.html" class="image-link"><img src="images/pd-marfleet-charity-accounting%20and-bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 					<nav id="nav">
 						<ul>
 							<li class="special">
@@ -37,11 +37,11 @@
 								<div id="menu">
 									<ul>
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="Bookkeeping.html">Bookkeeping</a></li>
-											<li><a href="Training-Support.html">Training & Support</a></li>
+											<li><a href="../PDP-Website%20(Live)%20copy/index.html">Home</a></li>
+											<li><a href="bookkeeping.html">Bookkeeping</a></li>
+											<li><a href="training-support.html">Training & Support</a></li>
 											<li><a href="Resources.html">Resources</a></li>
-											<li><a href="Contact.html">Contact</a></li>
+											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</ul>
 								</div>
